:wrench: sorting order WIP + p spacing fix
p tags all better white-spaced; WIP w query adjustment

--- a/src/style.scss
+++ b/src/style.scss
@@ -85,7 +85,7 @@ p {
   line-height: var(--lineHeight-relaxed);
   --baseline-multiplier: 0.179;
   --x-height-multiplier: 0.35;
-  margin: var(--spacing-0) var(--spacing-0) var(--spacing-8) var(--spacing-0);
+  margin: 0rem 1.4rem 1.8rem 0rem;
   padding: var(--spacing-2);
 }
 
